<resources>
    <string name="app_name">Track2App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="ask_number">Enter your Phone number</string>
    <string name="ask_email">Enter your Email id</string>
    <string name="ask_name">Enter your name</string>
    <string name="ask_password">Enter your Password</string>
    <string name="email_signIn">Sign In with Email</string>
    <string name="hi">Hi!</string>
    <string name="welcome">Welcome to Digi-Check</string>
    <string name="sign_in">Sign In</string>
    <string name="agent_sign_in">Sign In as Agent</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_facebook">Sign In with Facebook</string>
    <string name="sign_in_otp">Sign In with OTP</string>
    <string name="click_sign_up">New?Register Here</string>
    <string name="click_sign_in">Click here to Sign In</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="sign_up_with_otp">Sign Up with OTP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="get_otp">Get OTP</string>
    <string name="ask_otp">Enter OTP</string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="add_to_list">Add to List</string>
    <string name="enter_warranty_date">Enter Warranty Date</string>
    <string name="enter_purchase_date">Enter Purchase Date</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="product_serial_no">Product Serial No</string>
    <string name="enter_product_serial_no">Enter Product Serial No</string>
    <string name="click_to_add_image">Click to add image</string>
    <string name="warranty_date">Warranty Date</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="product_name">Product Name</string>
    <string name="appliances">APPLIANCES</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="view_complaints">Complaints</string>
    <string name="view_done_sr">Recent Requests</string>
    <string name="edit_profile">Edit_Profile</string>
    <string name="add_product">Add Product</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>