<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".fragments.user.OtpSignUpFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyt_phone_sign_in"
        android:visibility="visible"
        tools:visibility="visible"
        android:background="@color/skyblue"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/signIn_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter OTP to get verified"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            />
        <View
            android:id="@+id/view_line1"
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/signIn_txt"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>

        <EditText
            android:id="@+id/edit_name_txt"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/person"
            android:hint="@string/ask_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_line1"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_phone_txt"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:autofillHints="phone"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/phone"
            android:hint="@string/ask_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_name_txt"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@id/edit_phone_txt"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_getOTP"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/blue"
                android:text="@string/get_otp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/bar_otpSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>