<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyt_phone_sign_in"
        android:visibility="visible"
        tools:visibility="visible"
        android:background="@color/skyblue"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/signIn_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            />
        <View
            android:id="@+id/view_line1"
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/signIn_txt"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_name_box"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_line1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name_txt"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/person"
                android:hint="@string/ask_name"
                android:inputType="textPersonName"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_email_box"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_name_box"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email_txt"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/email"
                android:hint="@string/ask_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_name_txt"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_password_box"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_email_box">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password_txt"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/password"
                android:hint="@string/ask_password"
                android:inputType="textVisiblePassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_email_txt"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/edit_password_box"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_emailSignUp"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/blue"
                android:text="Sign Up"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/bar_emailSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>